[gd_scene load_steps=15 format=2]

[ext_resource path="res://ObstaclePlacer.gd" type="Script" id=1]
[ext_resource path="res://PathLine.gd" type="Script" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://CoinPlacer.gd" type="Script" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://boat.png" type="Texture" id=7]
[ext_resource path="res://explosion.wav" type="AudioStream" id=8]
[ext_resource path="res://karleton tunnel adventure2.png" type="Texture" id=9]
[ext_resource path="res://pickupCoin.wav" type="AudioStream" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -929, -2633, 0, 0, 0, 0, -917, -1290, 0, 0, 0, 0, -2835, 831, 0, 0, 0, 0, -2823, 3085, 0, 0, 0, 0, -629, 3133, 0, 0, 0, 0, -425, 2857, 0, 0, 0, 0, 2859, 2845 )
}

[sub_resource type="Curve" id=4]
min_value = 0.25
max_value = 0.55
_data = [ Vector2( 0, 0.25 ), 0.0, 0.0, 0, 0, Vector2( 0.333333, 0.281818 ), 0.279379, 0.279379, 0, 0, Vector2( 1, 0.506364 ), 0.0636364, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.1401, 17.8391 )

[sub_resource type="Animation" id=3]
resource_name = "skid"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Player:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0002, 100.0, 110.0, 120.0, 110.0, 100.0, 90.0, 80.0, 70.0, 60.0, 70.0, 80.0, 90.0 ]
}

[node name="Root2" type="Node"]

[node name="Scenery" type="Node2D" parent="."]
position = Vector2( 77, 207 )

[node name="Background" type="Sprite" parent="Scenery"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerPath" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathLine" type="Line2D" parent="PlayerPath"]
position = Vector2( 1, 0 )
width = 80.0
default_color = Color( 0.32549, 0.6, 0.94902, 1 )
antialiased = true
script = ExtResource( 2 )

[node name="PlayerPathFollow" type="PathFollow2D" parent="PlayerPath"]
position = Vector2( -929, -2633 )
rotation = 1.56184

[node name="PlayerObject" type="Area2D" parent="PlayerPath/PlayerPathFollow"]
script = ExtResource( 6 )
zoom_curve = SubResource( 4 )
MAX_SPEED = 250
DEFAULT_SPEED = 70
CRASH_FORCE = 165

[node name="Player" type="Sprite" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
position = Vector2( 1.8924, -0.647064 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
position = Vector2( 1.98328, -0.752075 )
rotation = 1.57036
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 2 )

[node name="RemoteCartCamera" type="RemoteTransform2D" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
position = Vector2( 66.623, -2.26453 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
remote_path = NodePath("../CartCamera")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
anims/skid = SubResource( 3 )

[node name="CartCamera" type="Camera2D" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
position = Vector2( 66.623, -2.26453 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
rotating = true
zoom = Vector2( 0.25, 0.25 )
limit_smoothed = true

[node name="CollisionEffect" type="AudioStreamPlayer" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
stream = ExtResource( 8 )
volume_db = -4.37

[node name="pickupCoin1" type="AudioStreamPlayer" parent="PlayerPath/PlayerPathFollow/PlayerObject"]
stream = ExtResource( 10 )

[node name="ObstaclePlacer" type="PathFollow2D" parent="PlayerPath"]
position = Vector2( -666.197, 3132.19 )
rotation = 0.0218828
offset = 8591.79
script = ExtResource( 1 )
obstacle_to_spawn = ExtResource( 4 )
obstacle_count = 75
spawner_seed = "111"

[node name="CoinPlacer" type="PathFollow2D" parent="PlayerPath"]
position = Vector2( -929, -2633 )
rotation = 1.56184
script = ExtResource( 5 )
Coin_scene = ExtResource( 3 )

[connection signal="area_shape_entered" from="PlayerPath/PlayerPathFollow/PlayerObject" to="PlayerPath/PlayerPathFollow/PlayerObject" method="_on_PlayerObject_area_shape_entered"]
